added some functionality towards easy copy of bibtex

--- a/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
+++ b/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
@@ -2,4 +2,11 @@ div.hidden {
     display: none;
 }
 
-
+.code{
+    padding:15px;
+    background-color:rgb(230,230,230);
+    border:1px solid black;
+    resize:none;
+    overflow-y:hidden;
+    width:500px;
+}
