--- a/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
+++ b/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
@@ -52,24 +52,38 @@ body.easter * {
 }
 
 @-webkit-keyframes background{
-        0%   { background-color:white;}
-	20%  { background-color:green; }
-	40%  { background-color:yellow; }
-	60%  { background-color:blue; }
-	80%  { background-color:black; }
-	100% { background-color:white; }
+    0%   { background-color:white;}
+20%  { background-color:green; }
+40%  { background-color:yellow; }
+60%  { background-color:blue; }
+80%  { background-color:black; }
+100% { background-color:white; }
 
 }
 @-webkit-keyframes easter {
-	0%   { -webkit-transform: translate(2px, 1px)   rotate(0deg); }
-	10%  { -webkit-transform: translate(-1px, -2px) rotate(-2deg); }
-	20%  { -webkit-transform: translate(-3px, 0px)  rotate(2deg); }
-	30%  { -webkit-transform: translate(0px, 2px)   rotate(0deg); }
-	40%  { -webkit-transform: translate(2px, -1px)  rotate(2deg); }
-	50%  { -webkit-transform: translate(-1px, 1px)  rotate(-2deg); }
-	60%  { -webkit-transform: translate(-3px, -2px)  rotate(0deg); }
-	70%  { -webkit-transform: translate(2px, 1px)   rotate(-2deg); }
-	80%  { -webkit-transform: translate(-1px, -2px) rotate(2deg); }
-	90%  { -webkit-transform: translate(4px, -2px)   rotate(0deg); }
-	100% { -webkit-transform: translate(4px, -5px)  rotate(-2deg); }
+    0%   { -webkit-transform: translate(2px, 1px)   rotate(0deg); }
+10%  { -webkit-transform: translate(-1px, -2px) rotate(-2deg); }
+20%  { -webkit-transform: translate(-3px, 0px)  rotate(2deg); }
+30%  { -webkit-transform: translate(0px, 2px)   rotate(0deg); }
+40%  { -webkit-transform: translate(2px, -1px)  rotate(2deg); }
+50%  { -webkit-transform: translate(-1px, 1px)  rotate(-2deg); }
+60%  { -webkit-transform: translate(-3px, -2px)  rotate(0deg); }
+70%  { -webkit-transform: translate(2px, 1px)   rotate(-2deg); }
+80%  { -webkit-transform: translate(-1px, -2px) rotate(2deg); }
+90%  { -webkit-transform: translate(4px, -2px)   rotate(0deg); }
+100% { -webkit-transform: translate(4px, -5px)  rotate(-2deg); }
+}
+
+.list>div{
+    border-width:1px;
+    border-style:solid;
+    display:inline-block;
+    padding:15px 10px;
+    clear:left;
+    margin:5px;
+    cursor:pointer;
+}
+.selected{
+    border-color: blue;
+    box-shadow: 0px 0px 8px blue;
 }
