--- a/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
+++ b/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
@@ -73,7 +73,9 @@ body.easter * {
 90%  { -webkit-transform: translate(4px, -2px)   rotate(0deg); }
 100% { -webkit-transform: translate(4px, -5px)  rotate(-2deg); }
 }
-
+.list{
+    white-space:pre-line;
+}
 .list>div{
     border-width:1px;
     border-style:solid;
@@ -82,8 +84,9 @@ body.easter * {
     clear:left;
     margin:5px;
     cursor:pointer;
+    white-space:normal;
 }
 .selected{
     border-color: blue;
-    box-shadow: 0px 0px 8px blue;
+    box-shadow: 0px 0px 15px blue;
 }
