--- a/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
+++ b/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
@@ -39,6 +39,7 @@ body.easter{
     -webkit-animation-duration: 1.8s;
     -webkit-transform-origin: 50% 50%;
     -webkit-animation-timing-function: linear;
+    cursor:url('beer.png'), crosshair;
 }
 
 body.easter * {
@@ -72,6 +73,13 @@ body.easter * {
 80%  { -webkit-transform: translate(-1px, -2px) rotate(2deg); }
 90%  { -webkit-transform: translate(4px, -2px)   rotate(0deg); }
 100% { -webkit-transform: translate(4px, -5px)  rotate(-2deg); }
+}
+
+@-webkit-keyframes head {
+    0% {    background-position:0 0;}
+49% {background-position:0 0;}
+50% {    background-position:-326px 0;}
+99% {background-position:-326px 0;}
 }
 
 @-webkit-keyframes walk {
@@ -134,7 +142,7 @@ body.easter * {
     width:316px;
     height:480px;
     background-position:0 0;
-        background-image:url('lukedisko.png');
+    background-image:url('lukedisko.png');
     background-repeat: no-repeat;
     opacity:.02;
     position:fixed;
@@ -146,12 +154,17 @@ body.easter * {
     background-position:-326px 0;
     opacity:.5;
     cursor:url('beer.png'), crosshair;
+    -webkit-animation-timing-function:cubic-bezier(0, 1, 0, 1);
+    -webkit-animation-name:'head';
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
 }
 
 body.easter #luke{
-    -webkit-animation-name:'walk';
+    -webkit-animation-name:'walk','head';
     -webkit-animation-iteration-count: infinite;
-    -webkit-animation-duration: 5s;
+    -webkit-animation-duration: 5s,1s;
+    -webkit-animation-timing-function: ease-in-out,cubic-bezier(0, 1, 0, 1);
     opacity:.7;
     border-color:green;
     border-radius:10px 0 0 ;
