--- a/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
+++ b/Ohtu-miniprojekti/src/main/webapp/public-resources/style.css
@@ -77,9 +77,8 @@ body.easter * {
 
 @-webkit-keyframes head {
     0% {    background-position:0 0;}
-49% {background-position:0 0;}
 50% {    background-position:-326px 0;}
-99% {background-position:-326px 0;}
+100% {background-position:0 0;}
 }
 
 @-webkit-keyframes walk {
@@ -157,7 +156,7 @@ body.easter * {
     background-position:-326px 0;
     opacity:.5;
     cursor:url('beer.png'), crosshair;
-    -webkit-animation-timing-function:cubic-bezier(0, 1, 0, 1);
+    -webkit-animation-timing-function:steps(1);
     -webkit-animation-name:'head';
     -webkit-animation-duration: 2s;
     -webkit-animation-iteration-count: infinite;
@@ -167,7 +166,7 @@ body.easter #luke{
     -webkit-animation-name:'walk','head';
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-duration: 5s,1s;
-    -webkit-animation-timing-function: ease-in-out,cubic-bezier(0, 1, 0, 1);
+    -webkit-animation-timing-function: ease-in-out,steps(1);
     opacity:.7;
     border-color:green;
     border-radius:10px 0 0 ;
